--- a/example.qmd
+++ b/example.qmd
@@ -4,10 +4,10 @@ format: html
 filters:
   - glossary
 glossary:
-  id: "my-glossary"
-  class: "definition"
-  contents:
-    - "ex*"
+  - id: "my-glossary"
+    class: "definition"
+    contents:
+      - "ex*"
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum morbi blandit cursus risus at ultrices mi tempus. Quam pellentesque nec nam aliquam. Tortor dignissim convallis aenean et tortor at risus viverra adipiscing. Est placerat in egestas erat imperdiet sed. Amet purus gravida quis blandit turpis cursus. Tortor posuere ac ut consequat semper. Nibh sed pulvinar proin gravida hendrerit. Mauris nunc congue nisi vitae. Nunc sed augue lacus viverra vitae congue eu.
